--- a/page.html
+++ b/page.html
@@ -151,7 +151,7 @@
 				<div class="d-flex justify-between">
 					<div style="width:65%">
 						<p>
-						I'm Mouad ZIANI, 24 years old, Full Stack Software Engineer on web ecosystem, graduated with a Master's degree specialised in Computer System Engineering and passionate about software engineering, with strong background in PHP, Javascript/Typescript, Java and Python.</p>
+						I'm Fahmi Lahcen, 24 years old, Full Stack Software Engineer on web ecosystem, graduated with a Master's degree specialised in Computer System Engineering and passionate about software engineering, with strong background in PHP, Javascript/Typescript, Java and Python.</p>
 						<p>
 							I have over +3 years of experience at private IT companies. Also as a freelancer.I'm positive, open-minded and determined. I'm always looking for personal and professional self-improvement, looking for greater and bigger challenges, and for great opportunities of sharing and learning with the best.
 
