--- a/page.html
+++ b/page.html
@@ -210,7 +210,14 @@
 
 		<section class="vedio py-50">
 			<div class="container">
-				
+				<h1 class="text-center">How It Work</h1>
+				<p class="text-center">It is a long established fact that a reader</p>
+				<div class="vedio-container">
+					<video controls width="250">
+						<source src="vedio/pexels-pavel-danilyuk-5495781.mp4" type="video/mp4">
+						Sorry, your browser doesn't support embedded videos.
+					</video>
+				</div>
 			</div>
 		</section>
 
